test/error/LexResourceSyntax1.ci
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource("foo"); //ERROR: Expected Less, got LeftParenthesis
		return true;
	}
}
